fix: :lipstick: Fixed content shift in member management <ul>s on hover

--- a/scss/_custom-settings.scss
+++ b/scss/_custom-settings.scss
@@ -13,7 +13,7 @@ $padding-sizes: (
 );
 $user-card-sizes: (
   xsmall: 24px,
-  small: 36px,
+  small: 2.4rem,
   medium: 54px,
   large: 96px,
   xlarge: 144px,
